# lora-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/lora_pipeline/: __init__.py  bootstrap.py  cli.py  config.py  duplicate.py  file_ops.py  image_ops.py  ollama_client.py  processor.py  ui.py
tests/: conftest.py  helpers.py  test_duplicate.py  test_file_ops.py  test_image_ops.py  test_ollama_ops.py  test_processor.py
